--- a/package.json
+++ b/package.json
@@ -40,17 +40,11 @@
   "scripts": {
     "vscode:prepublish": "yarn run compile",
     "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "yarn run compile",
-    "test": "node ./out/test/runTest.js"
+    "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.1",
-    "@types/mocha": "^9.1.0",
     "@types/node": "^14",
     "@types/vscode": "^1.37.0",
-    "glob": "^7.1.4",
-    "mocha": "^9.2.2",
     "tslint": "^5.12.1",
     "typescript": "^4.6.3",
     "vscode-test": "^1.0.2"
